/* Second Teleconference: October 21 */

--- a/wiki/Conference_Calls.mediawiki
+++ b/wiki/Conference_Calls.mediawiki
@@ -59,7 +59,7 @@ For all participants:
 
 = Second Teleconference: October 21 =
 
-The second call is
+The second call was
 * October 21, 2010, 3pm Eastern US
 
 == Agenda ==
