--- a/wiki/Conference_Calls.mediawiki
+++ b/wiki/Conference_Calls.mediawiki
@@ -69,3 +69,31 @@ The agenda was the [[#Action Items Before Next Call|Action Items from the first 
 == Minutes ==
 
 {{UnderConstuction|These minutes will be finalized shortly.}}
+
+=== Action Items from previous meeting ===
+
+==== [[Use Cases]] ====
+
+Several more [[Use Cases]] have been written.  [[Richard]], and [[Weigang]] have additional use cases in the works, and [[Ben]] has an extension to [[Eric]]'s.   '''You are encouraged to continue to submit use cases.'''  Also, please feel free to comment on or extend existing use cases.  Many of these will become the basis for groups that form at the hackathon.
+
+==== Needed Computing Resources ====
+
+# What computing resources does NESCent need to provide for you to get your job done?  Please post these to [[Hilmar]] and [[Dave]] or (preferably) to the mailing list.
+
+==== [[Boot Camps]] ====
+
+# What [[Boot Camps]] you would like to see during the event.  Post them to the [[Boot Camps]] page or send them to the mailing list.
+
+==== NeXML / PhyloXML ====
+
+# Someone should contact the developers of NeXML and PhyloXML to see if they have any suggestions/advice on visualizing phylogenetic data using those formats.
+
+==== User Pages ====
+
+# Create a user page.  Do this by clicking on your email address in the top bar of the wiki, typing something, and saving it.
+
+==== List Your Interests ====
+
+# [[Dave]] was going to list people's names on each of the three objective pages, based on what he believes their interests are.  ''However he quickly found this very difficult to do.'' Therefore, this action item is: Participants will list their names on the [[Objectives]] pages that they are interested in.
+
+=== Other Discussion ===
