--- a/wiki/Conference_Calls.mediawiki
+++ b/wiki/Conference_Calls.mediawiki
@@ -70,13 +70,13 @@ The agenda was the [[#Action Items Before Next Call|Action Items from the first 
 
 {{UnderConstuction|These minutes will be finalized shortly.}}
 
-=== Action Items from previous meeting ===
+First, the action ttems from previous meeting.
 
-==== [[Use Cases]] ====
+=== [[Use Cases]] ===
 
 Several more [[Use Cases]] have been written.  [[Richard]], and [[Weigang]] have additional use cases in the works, and [[Ben]] has an extension to [[Eric]]'s.   '''You are encouraged to continue to submit use cases.'''  Also, please feel free to comment on or extend existing use cases.  Many of these will become the basis for groups that form at the hackathon.
 
-==== Needed Computing Resources ====
+=== Needed Computing Resources ===
 
 ''[[Jason]] inquired about setting up shared storage for datasets'' so that people can upload their datasets for everyone to see before the hackathon.  We can also use this repository during the event.
 
@@ -84,19 +84,19 @@ Several more [[Use Cases]] have been written.  [[Richard]], and [[Weigang]] have
 
 Jason's question led to another question.  ''Do we need to setup a test machine to deploy and test things on?''
 
-==== [[Boot Camps]] ====
+=== [[Boot Camps]] ===
 
 # What [[Boot Camps]] you would like to see during the event.  Post them to the [[Boot Camps]] page or send them to the mailing list.
 
-==== NeXML / PhyloXML ====
+=== NeXML / PhyloXML ===
 
 # Someone should contact the developers of NeXML and PhyloXML to see if they have any suggestions/advice on visualizing phylogenetic data using those formats.
 
-==== User Pages ====
+=== User Pages ===
 
 # Create a user page.  Do this by clicking on your email address in the top bar of the wiki, typing something, and saving it.
 
-==== List Your Interests ====
+=== List Your Interests ===
 
 # [[Dave]] was going to list people's names on each of the three objective pages, based on what he believes their interests are.  ''However he quickly found this very difficult to do.'' Therefore, this action item is: Participants will list their names on the [[Objectives]] pages that they are interested in.
 
