--- a/wiki/Conference_Calls.mediawiki
+++ b/wiki/Conference_Calls.mediawiki
@@ -78,11 +78,31 @@ Several more [[Use Cases]] have been written.  [[Richard]], and [[Weigang]] have
 
 === Needed Computing Resources ===
 
-''[[Jason]] inquired about setting up shared storage for datasets'' so that people can upload their datasets for everyone to see before the hackathon.  We can also use this repository during the event.
+==== Dataset Repository ====
 
-'''[[Dave]] will make inquiries with NESCent support staff to make this happen.'''
+''[[Jason]] inquired about setting up shared storage for datasets'' so that people can upload their datasets for everyone to see before the hackathon.  We can also use this repository during the event.  [[Eric]] and [[Ben]] provide several alignment datasets.  [[Maren]] has population diversity data and phenotype data that she will provide.
 
-Jason's question led to another question.  ''Do we need to setup a test machine to deploy and test things on?''
+'''[[Dave]] will make inquiries with NESCent support staff to make this happen.  Dave will also create a page for people to list what datasets they are planning to upload for use/testing at the event.'''  
+
+'''[[Participants]] with appropriate, sharable datasets will upload them to the dataset repository, and describe them on the "Datasets" section of each of the [[Objectives]] pages.'''
+
+==== Shared / Common Server ====
+
+Jason's question led to another question.  ''Do we need to setup a test machine to deploy and test things on?''  We didn't come to a clear answer to this question.  
+
+There was no one on the call dieing to have this.  [[Scott]] and [[Eric]] argued against it.  [[Dave]] pointed out that the hackathon is not about compute intensive activities like generating alignments and phylogenies, but rather about visualizing them.
+
+Many possibilities were discussed:
+* Get an Amazon EC2 instance up for the week.
+** If we did this we would need to know system requirements in terms of storage, memory, and CPUs well ahead of time.
+** [[Eric]] pointed out that if it's easy and cheap to set one of these up, then there is little harm in doing so.
+** We might be able to use a [[gmod:VMware|GMOD VMware]] image from the [[#2010 GMOD Summer School - Americas|2010 GMOD Summer School - Americas]] or from recent work [[Scott]] is doing, to set up the EC2 server.
+* We could also just make a [[gmod:VMware|GMOD VMware]] image available for people to run on their own laptops.
+* Another option is using the shared compute cluster at Duke.
+
+Which, if any, of these options would be most useful depends on what we want to do with it.
+
+'''[[Dave]] will create a survey and poll participants for what, if any shared/common server we need to setup.'''
 
 === [[Boot Camps]] ===
 
