--- a/wiki/Conference_Calls.mediawiki
+++ b/wiki/Conference_Calls.mediawiki
@@ -108,7 +108,7 @@ Which, if any, of these options would be most useful depends on what we want to 
 
 Several [[Boot Camps]] have now been proposed.  Boot camps can lat anywhere from 15 minutes to an hour, although shorter is better.  
 
-'''[[Participants]] will add any boot camps they would like to see to the [[Boot Camp]] page, ''and'' indicate which boot camps you are interested in.  [[Participants#Organizing Committee|Organizers]] will then find instructors for boot camps with sufficient demand. In order to give instructors enough time to prepare, please do this no later than Monday, October 25.'''
+'''[[Participants]] will add any boot camps they would like to see to the [[Boot Camps]] page, ''and'' indicate which boot camps you are interested in.  [[Participants#Organizing Committee|Organizers]] will then find instructors for boot camps with sufficient demand. In order to give instructors enough time to prepare, please do this no later than Monday, October 25.'''
 
 Boot camps proposed after this deadline might still be possible, if they can be done on an impromptu basis.
 
