--- a/wiki/Conference_Calls.mediawiki
+++ b/wiki/Conference_Calls.mediawiki
@@ -122,7 +122,10 @@ Boot camps proposed after this deadline might still be possible, if they can be 
 
 <div class="indent">
 ''[[Dave]] did not talk about this, but he's also created shortcuts (redirect pages in MediaWiki parlance) for each user page that has been created.  This means you can now link to a participant's page by just putting their first name in brackets in the text.  For example,''
- <nowiki>[[Terry]] works for Cornell from North Carolina, while [[Rob]] and [[Jonathan]] work for Cornell from Oregon.  [[Andrew H]] lives in California and works for Colorado (I think), but [[Andrew T]] lives ''and'' works in California, just to be different.</nowiki>
+  <nowiki>[[Terry]] works for Cornell from North Carolina, while [[Rob]] and [[Jonathan]]
+ (or should that say [[Duke]]?) work for Cornell from Oregon.  [[Andrew H]] lives 
+ in California and works for Colorado (I think), but [[Andrew T]] lives ''and'' 
+ works in California, just to be different.</nowiki>
 Becomes:
 : [[Terry]] works for Cornell from North Carolina, while [[Rob]] and [[Jonathan]] (or should that say [[Duke]]?) work for Cornell from Oregon.  [[Andrew H]] lives in California and works for Colorado (I think), but [[Andrew T]] lives ''and'' works in California, just to be different.
 </div>
