--- a/wiki/Conference_Calls.mediawiki
+++ b/wiki/Conference_Calls.mediawiki
@@ -70,7 +70,7 @@ The agenda was the [[#Action Items Before Next Call|Action Items from the first 
 
 {{UnderConstuction|These minutes will be finalized shortly.}}
 
-First, the action ttems from previous meeting.
+First, the action items from previous meeting.
 
 === [[Use Cases]] ===
 
@@ -152,3 +152,20 @@ This means that if your code is not in this state when the hackathon starts, the
 ==== Next Call ====
 
 We don't think we will need a third call, however, if at the end of next week, it looks like we have a lot of open issues that would benefit from a discussion, then we will schedule a third and final cal during the week before the event.
+
+=== Action Items ===
+
+# [[Participants]] are encouraged to continue to submit use cases.  Also, please feel free to comment on or extend existing use cases.  Many of these will become the basis for groups that form at the hackathon.
+# [[Dave]] will make inquiries with NESCent support staff to make this happen.  Dave will also create a page for people to list what datasets they are planning to upload for use/testing at the event. 
+# [[Participants]] with sharable datasets will upload them to the dataset repository, and describe them on the "Datasets" section of each of the [[Objectives]] pages:
+#* [[Comparative Genomics Visualization#Shared / Test Datasets |Comparative Genomics Visualization]]
+#* [[Phylogenetics and Tree Visualization#Shared / Test Datasets|Phylogenetics and Tree Visualization]]
+#* [[Diversity and Phenotypes#Shared / Test Datasets|Diversity and Phenotypes]]
+# [[Dave]] will create a survey and poll participants for what, if any shared/common server we need to setup.
+# [[Participants]] will add any boot camps they would like to see to the [[Boot Camps]] page, ''and'' indicate which boot camps you are interested in.  [[Participants#Organizing Committee|Organizers]] will then find instructors for boot camps with sufficient demand. '''In order to give instructors enough time to prepare, please do this no later than Monday, October 25.'''
+# [[Hilmar]] will contact the developers of NeXML and PhyloXML to see if they have any suggestions/advice on visualizing phylogenetic data using those formats, and what if any implementations have already been built.
+# If you haven't already done so, please create a ''user page.''  Do this by clicking on your email address in the top bar of the wiki, typing something, and saving it.
+# Please add your name to the list of interested participants for any objective you might want to work on at the hackathon.  This is ''not'' a commitment to work on that objective during the hackathon.  It merely gives other participants an idea of who is also interested in what they are interested in.
+#* [[Comparative Genomics Visualization#Interested Participants|Comparative Genomics Visualization]]
+#* [[Phylogenetics and Tree Visualization#INTERESTED PARTICIPANTS|Phylogenetics and Tree Visualization]]
+#* [[Diversity and Phenotypes#Interested Participants|Diversity and Phenotypes]]
