--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -4,7 +4,7 @@ The following information is an overview of your travel plans for your trip to N
 
 ==Hotel Arrangements:==
 
-NESCent will pay for your room, while you will be responsible for all other incidental room charges, including phone calls and meals you might charge to your room.
+All out of town participants will be staying at the downtown [http://www.marriott.com/hotels/travel/rducv-durham-marriott-convention-center/ Durham Marriott].  NESCent will pay for your room, while you will be responsible for all other incidental room charges, including phone calls and meals you might charge to your room.
 
 If your travel plans change and you are not able to attend the meeting, please assist NESCent in avoiding any hotel penalties by contacting Danielle Wilson at NESCent via email Danielle@nescent.org or phone at 919-668-4545 to make any changes or cancel your room reservations.
 
