/* Getting to NESCent: */

--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -23,6 +23,8 @@ Upon arrival to the airport, please take a taxi to the hotel.  The taxis are ava
 ==Getting to NESCent:==
 NESCent will coordinate daily shuttle service between the hotel and the NESCent office for your visit.  We will also pre-schedule your out-bound airport shuttles (if applicable).  A schedule will be distributed upon your arrival at NESCent.
 
+In addition you can get between NESCent and the Hotel at other times using the Bull City Connector.
+
 == Meal Arrangements: == 
 
 '''''If'' NESCent is paying your meal costs and you aren't with Duke:'''
