--- a/wiki/Conference_Calls.mediawiki
+++ b/wiki/Conference_Calls.mediawiki
@@ -154,7 +154,7 @@ We don't think we will need a third call, however, if at the end of next week, i
 == Action Items ==
 
 # [[Participants]] are encouraged to continue to submit use cases.  Also, please feel free to comment on or extend existing use cases.  Many of these will become the basis for groups that form at the hackathon.
-# [[Dave]] will make inquiries with NESCent support staff to make this happen.  Dave will also create a page for people to list what datasets they are planning to upload for use/testing at the event. 
+# [[Dave]] will make inquiries with NESCent support staff to create a space for shared datasets.  Dave will also create a page for people to list what datasets they are planning to upload for use/testing at the event. 
 # [[Participants]] with sharable datasets will upload them to the dataset repository, and describe them on the "Datasets" section of each of the [[Objectives]] pages:
 #* [[Comparative Genomics Visualization#Shared / Test Datasets |Comparative Genomics Visualization]]
 #* [[Phylogenetics and Tree Visualization#Shared / Test Datasets|Phylogenetics and Tree Visualization]]
