Change to wiki page

--- a/wiki/Diversity_and_Phenotypes.mediawiki
+++ b/wiki/Diversity_and_Phenotypes.mediawiki
@@ -21,6 +21,7 @@ Please add your name below.
 * [[User:balhoff@nescent.org|Jim Balhoff]]
 * [[User:ybendana@usc.edu|Yuri Bendana]]
 * [[User:friesen@usc.edu|Maren Friesen]]
+* [[User:tmc46@cornell.edu|Terry Casstevens]]
 * Your name here
 
 == See Also ==
