--- a/wiki/Boot_Camps.mediawiki
+++ b/wiki/Boot_Camps.mediawiki
@@ -1,6 +1,6 @@
 ==Current state of Chado Natural Diversity module==
 
-''People interested in attending:'' [[User:Vg34|Vladimir]], [[User:diapriid@gmail.com|Matt]], [[User:balhoff@nescent.org|Jim]],  [[User:friesen@usc.edu|Maren]],  [[User:ybendana@usc.edu|Yuri]] (add your name)
+''People interested in attending:'' [[User:Vg34|Vladimir]], [[User:diapriid@gmail.com|Matt]], [[User:balhoff@nescent.org|Jim]],  [[User:friesen@usc.edu|Maren]],  [[User:ybendana@usc.edu|Yuri]], [[User:rdhayes@lbl.gov|Richard]](add your name)
 
 Relevant resources and questions:  
 * [http://gmod.org/wiki/Chado_Natural_Diversity_Module_Working_Group Chado Natural Diversity Module Working Group] 
@@ -12,7 +12,7 @@ Relevant resources and questions:
 
 == [[gmod:Chado|Chado]] essentials ==
 
-''People interested in attending:'' [[User:diapriid@gmail.com|Matt]], [[User:Vg34|Vladimir]], [[User:cjfields@illinois.edu|Chris]], [[User:balhoff@nescent.org|Jim]], [[User:ybendana@usc.edu|Yuri]] [[User:jonathan@leto.net|Duke]] (add your name)
+''People interested in attending:'' [[User:diapriid@gmail.com|Matt]], [[User:Vg34|Vladimir]], [[User:cjfields@illinois.edu|Chris]], [[User:balhoff@nescent.org|Jim]], [[User:ybendana@usc.edu|Yuri]], [[User:jonathan@leto.net|Duke]], [[User:rdhayes@lbl.gov|Richard]] (add your name)
 
 The Chado Way, Features, CVs, DBXREFs and IDs, ..
 
@@ -20,7 +20,7 @@ Mechanics of using Chado: installing, loading data. --[[User:Vg34|Vladimir]]
 
 == Genome Browsing Essentials ==
 
-''People interested in attending:'' [[User:diapriid@gmail.com|Matt]] [[User:jonathan@leto.net|Duke]] (add your name)
+''People interested in attending:'' [[User:diapriid@gmail.com|Matt]], [[User:jonathan@leto.net|Duke]], [[User:rdhayes@lbl.gov|Richard]] (add your name)
 
 [[gmod:GBrowse|GBrowse]], [[gmod:JBrowse|JBrowse]], [[gmod:GBrowse_syn|GBrowse_syn]], [[http://genomevolution.org CoGe]], Mauve.; 
 
