--- a/wiki/Boot_Camps.mediawiki
+++ b/wiki/Boot_Camps.mediawiki
@@ -1,6 +1,6 @@
 ==Current state of Chado Natural Diversity module==
 
-''People interested in attending:'' [[User:Vg34|Vladimir]], [[User:diapriid@gmail.com|Matt]], [[User:balhoff@nescent.org|Jim]],  [[User:friesen@usc.edu|Maren]],  [[User:ybendana@usc.edu|Yuri]], [[User:rdhayes@lbl.gov|Richard]](add your name)
+''People interested in attending:'' [[User:Vg34|Vladimir]], [[User:diapriid@gmail.com|Matt]], [[User:balhoff@nescent.org|Jim]],  [[User:friesen@usc.edu|Maren]],  [[User:ybendana@usc.edu|Yuri]], [[User:rdhayes@lbl.gov|Richard]] (add your name)
 
 Relevant resources and questions:  
 * [http://gmod.org/wiki/Chado_Natural_Diversity_Module_Working_Group Chado Natural Diversity Module Working Group] 
@@ -32,7 +32,7 @@ This issue also has:
 
 == Comparative Genomics Visualization and Interactive Tools == 
 
-''People interested in attending:'' [[User:jonathan@leto.net|Duke]] 
+''People interested in attending:'' [[User:jonathan@leto.net|Duke]], [[User:rdhayes@lbl.gov|Richard]] 
 
 
 
