--- a/wiki/Agenda.mediawiki
+++ b/wiki/Agenda.mediawiki
@@ -83,10 +83,10 @@ Please add any events you know about here.
 | Deadline for participant attendance commitment
 |-
 | align="right"| '''October 4 or 7, 2010'''
-| First group teleconference
+| First of group [[Conference Calls]]
 |-
-| align="right"| '''October 18-22, 2010'''
-| Second group teleconference - please [http://doodle.com/du2yy3g2chft2srn fill out the poll]
+| align="right"| '''October 21, 2010'''
+| Second of group [[Conference Calls]]
 |-
 |align="right"| '''November 7, 2010'''
 | Most [[participants]] arrive in Durham
