--- a/wiki/Agenda.mediawiki
+++ b/wiki/Agenda.mediawiki
@@ -7,7 +7,7 @@
 |-
 ! Sunday
 |
-| Most out of town [[participants]] arrive; Stay at the Marriott.
+| Most out of town [[participants]] arrive; Stay at the {{MarriottLink|Marriott}}.
 |-
 ! rowspan="2" | Monday
 ! 9am
