Change to wiki page

--- a/wiki/Template:SharedDataSetsBlurb.mediawiki
+++ b/wiki/Template:SharedDataSetsBlurb.mediawiki
@@ -1,1 +1,6 @@
-[[Participants]] are encouraged to make any test datasets you have available for the hackathon.  Please describe any datasets you are planning on sharing.  NESCent will provide a repository for uploading these datasets before the hackathon and sharing them during the event.
+[[Participants]] are encouraged to make any test datasets you have available for the hackathon.  NESCent has created an FTP repository:
+: ftp://ftp.nescent.org/gmodevohackathon/
+
+with <tt>Objectives</tt> subdirectories for these files.  Directions on how to upload files was sent to the mailing list on 2010/10/28.
+
+Please describe '''on this web page''' any datasets you have shared that are related to this objective.
